--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Posts</title>
+    <style type="text/css">
+        body {
+            background-color: #f8edeb;
+        }
+        p {
+            font-size: large;
+            font-family: "Comic Sans MS";
+        }
+        table {
+            width: 100%;
+            word-wrap: break-word;
+        }
+        td.time{
+            width: 20vw;
+            background-color: #fae1dd;
+            color: #3e3229;
+            border-right-color: #fec5bb;
+            border-right-style: double;
+            border-right-width: 2px;
+        }
+        td.postBody{
+            width: 80vw;
+            background-color: #fcd5ce;
+            color: #372F2B;
+        }
+    </style>
 </head>
 <body>
 <p>My Diary</p>
@@ -22,3 +48,4 @@
 </table>
 </body>
 </html>
+
