--- a/public/html/react.html
+++ b/public/html/react.html
@@ -12,5 +12,7 @@
 <p class="title">My Diary</p>
 <div id="mainContainer"></div>
 
+<button type="button" id="previousButton" onclick="previousPosts()">Previous</button>
+<button type="button" id="nextButton" onclick="nextPosts()">Next</button>
 </body>
 </html>
